syntax = "proto3";
import "nanopb.proto";

option (nanopb_fileopt).fallback_type = FT_CALLBACK;

message SubMessage {
    repeated int32 foo = 1;
}

message MainMessage {
    SubMessage submsg = 1 [(nanopb).proto3_singular_msgs = true];
}

